# datafusion-ballista

./: Cargo.toml
ballista/client/: Cargo.toml
ballista/client/src/: extension.rs
ballista/core/: Cargo.toml
ballista/core/proto/: ballista.proto
ballista/core/src/: client.rs  config.rs  extension.rs  utils.rs
ballista/core/src/execution_plans/: distributed_query.rs  shuffle_reader.rs
ballista/core/src/remote_catalog/: catalog_serialize_ext.rs  function_serialize_ext.rs  mod.rs  remote_function_serialize_ext.rs  remote_scalar_udf.rs  remote_udtf.rs
ballista/core/src/serde/: mod.rs
ballista/core/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
ballista/executor/src/: config.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  standalone.rs
ballista/scheduler/src/: config.rs  test_utils.rs
ballista/scheduler/src/cluster/: memory.rs  mod.rs
ballista/scheduler/src/scheduler_server/: grpc.rs  mod.rs
ballista/scheduler/src/state/: executor_manager.rs
python/: Cargo.toml
python/src/: lib.rs
